refactor: simplify path handling by replacing Paths.get() with Path.of() in ImageLoader and ImageService refactor: remove redundant PathVariable annotations in GradingController and RecipeCategoryController